# DelayUiPlugin

./: CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
Source/DSP/: PluginProcessor.cpp  PluginProcessor.h
Source/UI/: CustomKnob.cpp  CustomKnob.h  PluginEditor.cpp  PluginEditor.h  SvgKnob.cpp  SvgKnob.h
